--- a/insurance-service.properties
+++ b/insurance-service.properties
@@ -1,6 +1,6 @@
 management.endpoints.web.exposure.include=* 
 
-spring.datasource.url=jdbc:mysql://localhost:3306/BookDetailsdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://localhost:3306/policydb?createDatabaseIfNotExist=true
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=MySQL1234$
