--- a/insurance-dev.properties
+++ b/insurance-dev.properties
@@ -1,6 +1,6 @@
 management.endpoints.web.exposure.include=* 
 
-spring.datasource.url=jdbc:h2:mem:BookDetailsdb
+spring.datasource.url=jdbc:h2:mem:policydb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=pass
